--- a/package.json
+++ b/package.json
@@ -17,7 +17,14 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@types/cytoscape": "^3.21.9",
     "@types/d3": "^7.4.3",
+    "cytoscape": "^3.33.1",
+    "cytoscape-avsdf": "^1.0.0",
+    "cytoscape-cola": "^2.5.1",
+    "cytoscape-cose-bilkent": "^4.1.0",
+    "cytoscape-dagre": "^2.5.0",
+    "cytoscape-klay": "^3.1.4",
     "d3": "^7.8.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
