--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 /* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
   "compileOnSave": false,
+  "include": ["src/**/*", "src/types/**/*"],
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
     "strict": true,
