--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dependency-mapping-tool",
   "version": "0.0.0",
+  "engines": { "node": "20.x" },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
